--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@dotenvx/dotenvx": "^1.25.1"
+		"@dotenvx/dotenvx": "^1.25.1",
+		"socket.io-client": "^4.8.1"
 	}
 }
