--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/http-status-codes": "^1.2.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
@@ -37,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@dotenvx/dotenvx": "^1.25.1",
+		"http-status-codes": "^2.3.0",
 		"socket.io-client": "^4.8.1"
 	}
 }
