--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@dotenvx/dotenvx": "^1.25.1",
+		"hls.js": "^1.5.20",
 		"http-status-codes": "^2.3.0",
 		"socket.io-client": "^4.8.1"
 	}
