--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.6",
+		"prisma": "^6.4.1",
 		"sass": "^1.77.8",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -38,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"@dotenvx/dotenvx": "^1.25.1",
+		"@prisma/client": "6.4.1",
 		"hls.js": "^1.5.20",
 		"http-status-codes": "^2.3.0",
 		"socket.io-client": "^4.8.1"
