--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-PORT = ''
+PORT = '8080'
 
-PUBLIC_AUTH_SERVER_DOMAIN = ""
-PUBLIC_API_SERVER_DOMAIN = ""
-PUBLIC_CLIENT_SERVER_DOMAIN = ""
+PUBLIC_AUTH_SERVER_DOMAIN = "http://localhost:8000"
+PUBLIC_API_SERVER_DOMAIN = "http://localhost:8001"
+PUBLIC_CLIENT_SERVER_DOMAIN = "http://localhost:8080"
+PUBLIC_LIVE_SESSION_HUB_SERVER_DOMAIN = "http://localhost:8005"
+PUBLIC_RTMP_SERVER_DOMAIN = 'http://localhost:8004'
+PUBLIC_TUS_SERVER_DOMAIN = 'http://localhost:1080'
 
-PRIVATE_AUTH_SERVER_DOMAIN = ""
-PRIVATE_API_SERVER_DOMAIN  = ""
+
+PRIVATE_AUTH_SERVER_DOMAIN = "http://auth:8000"
+PRIVATE_API_SERVER_DOMAIN  = "http://api:8001"
