--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"@types/http-status-codes": "^1.2.0",
+		"@types/tus-js-client": "^2.1.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
@@ -42,6 +43,7 @@
 		"@prisma/client": "6.4.1",
 		"hls.js": "^1.5.20",
 		"http-status-codes": "^2.3.0",
-		"socket.io-client": "^4.8.1"
+		"socket.io-client": "^4.8.1",
+		"tus-js-client": "^4.3.1"
 	}
 }
