--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 	"dependencies": {
 		"@dotenvx/dotenvx": "^1.25.1",
 		"@prisma/client": "6.4.1",
-		"hls.js": "^1.5.20",
+		"flv.js": "^1.6.2",
 		"http-status-codes": "^2.3.0",
 		"socket.io-client": "^4.8.1",
 		"tus-js-client": "^4.3.1"
