sepcify .env file on running command

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "dotenvx run --env-file=.env -- vite dev",
 		"build": "vite build",
 		"start": "dotenvx run --env-file=.env -- node build",
+		"local": "dotenvx run --env-file=.env.local -- vite dev",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
